# netflix-open-content-helper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  EXAMPLES.md  Gemfile  README.md  _config.yml  index.html  pyproject.toml  search.html
.github/workflows/: python-package.yml  release-to-pypi.yml
_posts/: 2025-04-08-welcome-to-jekyll.markdown
docs/: Gemfile  _config.yml  examples.md  index.md
docs/_posts/: 2025-04-08-welcome-to-jekyll.markdown
examples/: index.html
reports/coverage/: class_index.html  coverage.xml  function_index.html  index.html  status.json  z_09698922202e6e2b___init___py.html  z_09698922202e6e2b___main___py.html  z_09698922202e6e2b_cli_py.html  z_09698922202e6e2b_models_py.html  z_09698922202e6e2b_parser_py.html  z_0ce2542b555e6d85___init___py.html  z_0ce2542b555e6d85___main___py.html  z_0ce2542b555e6d85_cli_py.html  z_0ce2542b555e6d85_models_py.html  z_0ce2542b555e6d85_parser_py.html  z_31256b695bfc4e26___init___py.html  z_31256b695bfc4e26___main___py.html  z_31256b695bfc4e26_cli_py.html  z_31256b695bfc4e26_models_py.html  z_31256b695bfc4e26_parser_py.html  z_4d1d65815c120f3d___init___py.html  z_4d1d65815c120f3d___main___py.html  z_4d1d65815c120f3d_cli_py.html  z_5b7e8dc64d3a233f___init___py.html  z_5b7e8dc64d3a233f___main___py.html  z_5b7e8dc64d3a233f_cli_py.html  z_5b7e8dc64d3a233f_models_py.html  z_5b7e8dc64d3a233f_parser_py.html  z_672e3814ee0a4a2d___init___py.html  z_672e3814ee0a4a2d___main___py.html  z_672e3814ee0a4a2d_cli_py.html  z_73b5036ef9cb0efd___init___py.html  z_73b5036ef9cb0efd___main___py.html  z_73b5036ef9cb0efd_cli_py.html  z_73b5036ef9cb0efd_models_py.html  z_73b5036ef9cb0efd_parser_py.html  z_7dceea0223bb221d___init___py.html  z_7dceea0223bb221d___main___py.html  z_7dceea0223bb221d_cli_py.html  z_aec90e60d66a8dc7___init___py.html  (+5 more)
reports/junit/: junit.xml  report.html
search/: search_index.json
src/netflix_open_content_helper/: __init__.py  __main__.py  cli.py  helper.py
src/netflix_open_content_helper/config/: config.yaml
technical/project-organization/: index.html
tests/: test_cli.py
