[project]
name = "netflix_open_content_helper"
version = "0.1.0"
description = "CLI for working with Netflix Open Content resources."
authors = [
    {name = "Jason MacLeod", email = "jason.d.macleod@gmail.com"},
]
dependencies = [
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "typer>=0.7.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netflix_open_content_helper"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.13.2",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "bandit>=1.8.0",
    "safety>=3.2.9",
]

[project.scripts]
noc = "netflix_open_content_helper.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
markers = [
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.isort]
profile = "black"
line_length = 88

[tool.bandit]
exclude_dirs = ["tests", "venv", ".env"]